Updates to June agenda

--- a/docs/CoPMeetingMins/June2020.md
+++ b/docs/CoPMeetingMins/June2020.md
@@ -21,9 +21,15 @@
 
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
-- Meet Our New Fellow Anna Zhang [Blog](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8).
-- Upcoming blogs: Federal Source Code Study Series, Spotlight Stories, Better Know an Engineer.
 - [Federal Source Code Summit - October 8, 2020](https://digital.gov/event/2020/10/08/federal-source-code-summit-building-coding/).
+- Blogs:
+    - [Federal Source Code Study Part 1](https://medium.com/codedotgov/federal-source-code-study-series-part-1-the-overview-72acce742260).
+    - [Federal Source Code Study Part 2](https://medium.com/codedotgov/federal-source-code-study-series-part-2-the-history-of-open-source-software-b77a87de887c).
+    - [Better Know and Engineer: Sara Cope](https://medium.com/codedotgov/code-gov-better-know-an-engineer-sara-cope-a840640bb96d).
+- Upcoming Blogs: 
+    - Federal Source Code Study Part 3 (6/19/2020).
+    - Spotlight Stories.
+- Be Featured in Better Know An Engineer, Contact: Nicole Williams at Nicole.williams@gsa.gov.
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
