--- a/docs/CoPMeetingMins/July2020.md
+++ b/docs/CoPMeetingMins/July2020.md
@@ -1,41 +1,38 @@
-# Agenda - 6/17/2020
+# Agenda - 7/16/2020
 
 ## Welcome
 - Thank you for joining today!
 - Purpose: This is a forum to learn from each other about the benefits of sharing and open sourcing software.
 
 ## Programming Notes
-1. Next meeting is July 16th (Always 3rd Thursday of the month.). 
+1. Next meeting is August 20th (Always 3rd Thursday of the month.). 
     - Meeting information sent via Code.gov listserv.
     - Sign up for CODE listserv - CODE-subscribe-request@listserv.gsa.gov. Leave the subject and body blank.
 2. We have the *#code-gov-partners* Slack channel for real-time collaboration. Anyone with a .gov and .mil email address can join. Send an email addition request to Amin Mehr (amin.mehr@gsa.gov).
 3. Here is our current [agency liaison list](SupportingDocs/agency_liaisons.md).
 
 ## Updates to the Code.gov platform
-- [Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8), a Coding It Forward Fellow, joined us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She is assisting with completion of USWDS integration.
+- [Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8), our Coding It Forward Fellow, joined us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She is assisting with completion of USWDS integration.
 - Ongoing [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/untagged-f6a1c3a2eccc07df5162).
-- Updated [engagement metrics](https://github.com/GSA/code-gov-github-metrics).
-    - There are 7,616 US federal code repositories with 72% open source and 22% gov't-wide reuse. GitHub is most used code platform with 69% followed by <= 1% for remaining products.
-    - Approximately five new federal government code repos are created each day on GitHub. That's 150 new repos per month and 1,800 per year.
 - Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API.
 
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
 - [Federal Source Code Summit - October 8, 2020](https://digital.gov/event/2020/10/08/federal-source-code-summit-building-coding/).
 - Blogs:
-    - [Federal Source Code Study Part 1](https://medium.com/codedotgov/federal-source-code-study-series-part-1-the-overview-72acce742260).
-    - [Federal Source Code Study Part 2](https://medium.com/codedotgov/federal-source-code-study-series-part-2-the-history-of-open-source-software-b77a87de887c).
+    - [Federal Source Code Study Part 3](https://medium.com/codedotgov/federal-source-code-study-series-part-3-federal-governments-intersection-with-oss-47d20b0a16b7).
+    - [Federal Source Code Study Part 4](https://medium.com/codedotgov/federal-source-code-study-series-part-4-cultural-beliefs-15ef04ea812b).
     - [Better Know and Engineer: Sara Cope](https://medium.com/codedotgov/code-gov-better-know-an-engineer-sara-cope-a840640bb96d).
 - Upcoming Blogs: 
-    - Federal Source Code Study Part 3 (6/19/2020).
-    - Spotlight Stories.
+    - Federal Source Code Study Part 5.
+    - Spotlight Story: Pioneering Open Source at the CFPB.
 - Be Featured in Better Know An Engineer, Contact: Nicole Williams at Nicole.williams@gsa.gov.
 - Follow Us on [Twitter](https://twitter.com/codedotgov), [Linkedin](https://www.linkedin.com/company/code-gov), [Medium](https://medium.com/@CodeDotGov).
 
 ## Current engagements
 - [Federal Source Code Study](https://github.com/GSA/code-gov/tree/master/docs/FederalSourceCodeStudy) is now live!
     - Three year study of agency implementation of the Federal Source Code Policy (FSCP).
-    - Findings show agencies struggle with technology and policy implementation do to organizational factors.
+    - Findings show agencies struggle with technology and policy implementation because of organizational factors.
     - Code.gov is planning future blog posts and speaking engagements presenting the study.
 - [Software Productivity and Quality Working Group (SPSQ)](https://www.nitrd.gov/nitrdgroups/index.php?title=SPSQ) coordinated by OSTP/NITRD.
     - Includes participants from NSF, NIST, DOD/NRL, DOD/ARL, NIH, GSA.
@@ -52,9 +49,8 @@ By Nicole Williams, Code.gov’s Comms Chief.
 
 ## Events
 - [Federal Source Code Summit](https://digital.gov/event/2020/10/08/federal-source-code-summit-building-coding/) - *Postponed to Oct. 8th*.
-- [Code Climate Engineering Leadership Summit: Virtual Edition](https://app.livestorm.co/code-climate-1/engineering-leadership-summit-virtual-edition) begins Thurs. 6/18. Occurs the next six Thursdays for 45mins each.
+- [Code Climate Engineering Leadership Summit: Virtual Edition](https://app.livestorm.co/code-climate-1/engineering-leadership-summit-virtual-edition) began Thurs. 6/18. Occurs the next six Thursdays for 45mins each.
+- Department of Transportation and Open Source (August 4, 2020) – Details Forthcoming
 
 ## Kudos
 - DOE, CFPB, NASA for working with the Code.gov team on new Spotlight Stories.
-- Sara Cope, GSA Digital.gov, for presenting last time and being featured in our blog series Better Know an Engineer.
-- NASA (Taylor Yates) & GSA (Amin Mehr) for working on the CDO Project.
