Update to meeting mins

--- a/docs/CoPMeetingMins/July2020.md
+++ b/docs/CoPMeetingMins/July2020.md
@@ -14,7 +14,7 @@
 ## Updates to the Code.gov platform
 - [Anna Zhang](https://medium.com/codedotgov/introducing-our-summer-fellow-anna-zhang-455fd792cad8), our Coding It Forward Fellow, joined us from Yale University where she is studying Computing and the Arts. She has worked on commercial projects with Fujifilm and Conde Nast. She is assisting with completion of USWDS integration.
 - Ongoing [release notes](https://github.com/GSA/code-gov-front-end/releases/tag/untagged-f6a1c3a2eccc07df5162).
-- Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API.
+- Future items: Updated metadata schema, M-16-21 compliance metrics, engagement metrics based on agency inventory and GH API, and AI labeling.
 
 ## Current news
 By Nicole Williams, Code.gov’s Comms Chief.
