Added Summit slides to Nov agenda

--- a/docs/CoPMeetingMins/Nov2020.md
+++ b/docs/CoPMeetingMins/Nov2020.md
@@ -31,6 +31,7 @@ By Nicole Williams, Code.gov’s Comms Chief.
 - Janie from CMS for CMS Lunch and Learn. Looking for someone to speak about going from closed source to open source on a project.
 
 ## Events
+- Federal Source Code Summit [study slides](https://github.com/GSA/code-gov/blob/master/docs/FederalSourceCodeStudy/FSCSummit%20Slides%202020%20-Joe%20Castle%20presentation.pdf).
 - [GitHub Universe](https://githubuniverse.com/) - Virtually December 8-10, 2020.
 
 ## Kudos
